# protobuf_to_geojson

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  nlohmann_json.cmake  protobuf.cmake
.github/workflows/: build_check.yml
create_protobuf/: CMakeLists.txt  test_protobuf.cpp
include/: IVisualization.h  visualization_types.h
pbf_to_geojson/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  visualization.proto
proto/srcgen/: visualization.pb.cc  visualization.pb.h
src/: CMakeLists.txt  protobufVisualizer.cpp  protobufVisualizer.h
